RESOLVED FIXED 91609
[Qt][WK2] Caching of ShareableSurfaces breaks tiling.
https://bugs.webkit.org/show_bug.cgi?id=91609
Summary [Qt][WK2] Caching of ShareableSurfaces breaks tiling.
Zeno Albisser
Reported 2012-07-18 03:25:53 PDT
This regression was triggered by r122554. We should only cache ShareableSurfaces, when they are GraphicsSurface based.
Attachments
patch for review. (3.00 KB, patch)
2012-07-18 03:46 PDT, Zeno Albisser
kenneth: review+
Zeno Albisser
Comment 1 2012-07-18 03:46:43 PDT
Created attachment 152979 [details] patch for review.
Zeno Albisser
Comment 2 2012-07-18 04:54:11 PDT
Note You need to log in before you can comment on or make changes to this bug.